edit swagger comments
